@@ -1,5 +1,6 @@
 package com.example.px_service;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.example.px_service.common.enums.BizCode;
 import com.example.px_service.common.exception.BizException;
 import com.example.px_service.domain.User;
@@ -9,7 +10,7 @@ import com.example.px_service.dto.frontend.Auth.LoginResponse;
 import com.example.px_service.dto.frontend.Auth.RegisterRequest;
 import com.example.px_service.dto.frontend.user.UserListRequest;
 import com.example.px_service.mapper.UserMapper;
-import com.example.px_service.service.AuthService;
+import com.example.px_service.service.impl.AuthServiceImpl;
 import com.example.px_service.util.JwtUtil;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,16 +21,18 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class AuthServiceTest {
+class AuthServiceTest {
 
     @Mock
     private UserMapper userMapper;
@@ -41,24 +44,20 @@ public class AuthServiceTest {
     private JwtUtil jwtUtil;
 
     @InjectMocks
-    private AuthService authService;
+    private AuthServiceImpl authService;
 
     @Test
     void createUser_shouldThrowException_whenUsernameAlreadyExists() {
-        RegisterRequest request = mock(RegisterRequest.class);
-        when(request.getUsername()).thenReturn("existinguser");
-        when(request.getMobile()).thenReturn("13800138000");
-
-        when(userMapper.existsByUsername("existinguser")).thenReturn(true);
+        RegisterRequest request = mockRegisterRequest("existinguser", "password123", "13800138000");
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(createUserEntity("existinguser", "encoded"));
 
         assertThatThrownBy(() -> authService.createUser(request))
-                .isInstanceOfSatisfying(BizException.class, ex -> {
-                    assertThat(ex.getErrorCode()).isEqualTo(BizCode.USERNAME_DUPLICATE);
-                });
+                .isInstanceOfSatisfying(BizException.class, ex ->
+                        assertThat(ex.getErrorCode()).isEqualTo(BizCode.USERNAME_DUPLICATE));
 
-        verify(userMapper).existsByUsername("existinguser");
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verifyNoMoreInteractions(userMapper);
-        verifyNoInteractions(passwordEncoder);
+        verifyNoInteractions(passwordEncoder, jwtUtil);
     }
 
     @Test
@@ -69,16 +68,12 @@ public class AuthServiceTest {
         String mobile = "13800138000";
         Integer userId = 100;
 
-        RegisterRequest request = mock(RegisterRequest.class);
-        when(request.getUsername()).thenReturn(username);
-        when(request.getPassword()).thenReturn(rawPassword);
-        when(request.getMobile()).thenReturn(mobile);
-
-        when(userMapper.existsByUsername(username)).thenReturn(false);
+        RegisterRequest request = mockRegisterRequest(username, rawPassword, mobile);
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(null);
         when(passwordEncoder.encode(rawPassword)).thenReturn(encodedPassword);
         when(userMapper.insert(any(User.class))).thenAnswer(invocation -> {
             User user = invocation.getArgument(0);
-            user.setId(userId.intValue());
+            user.setId(userId);
             return 1;
         });
 
@@ -90,15 +85,14 @@ public class AuthServiceTest {
         assertThat(result.getMobile()).isEqualTo(mobile);
 
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verify(userMapper).insert(userCaptor.capture());
+        verify(passwordEncoder).encode(rawPassword);
 
         User capturedUser = userCaptor.getValue();
         assertThat(capturedUser.getUsername()).isEqualTo(username);
         assertThat(capturedUser.getPassword()).isEqualTo(encodedPassword);
         assertThat(capturedUser.getMobile()).isEqualTo(mobile);
-
-        verify(userMapper).existsByUsername(username);
-        verify(passwordEncoder).encode(rawPassword);
     }
 
     @Test
@@ -108,16 +102,12 @@ public class AuthServiceTest {
         String encodedPassword = "$2a$10$encodedPasswordHash2";
         Integer userId = 101;
 
-        RegisterRequest request = mock(RegisterRequest.class);
-        when(request.getUsername()).thenReturn(username);
-        when(request.getPassword()).thenReturn(rawPassword);
-        when(request.getMobile()).thenReturn(null);
-
-        when(userMapper.existsByUsername(username)).thenReturn(false);
+        RegisterRequest request = mockRegisterRequest(username, rawPassword, null);
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(null);
         when(passwordEncoder.encode(rawPassword)).thenReturn(encodedPassword);
         when(userMapper.insert(any(User.class))).thenAnswer(invocation -> {
             User user = invocation.getArgument(0);
-            user.setId(userId.intValue());
+            user.setId(userId);
             return 1;
         });
 
@@ -129,15 +119,14 @@ public class AuthServiceTest {
         assertThat(result.getMobile()).isNull();
 
         ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verify(userMapper).insert(userCaptor.capture());
+        verify(passwordEncoder).encode(rawPassword);
 
         User capturedUser = userCaptor.getValue();
         assertThat(capturedUser.getUsername()).isEqualTo(username);
         assertThat(capturedUser.getPassword()).isEqualTo(encodedPassword);
         assertThat(capturedUser.getMobile()).isNull();
-
-        verify(userMapper).existsByUsername(username);
-        verify(passwordEncoder).encode(rawPassword);
     }
 
     @Test
@@ -146,14 +135,14 @@ public class AuthServiceTest {
         request.setPage(1);
         request.setSize(10);
 
-        when(userMapper.listUsers(10, 10)).thenReturn(Collections.emptyList());
+        when(userMapper.selectList(any(QueryWrapper.class))).thenReturn(List.of());
 
         List<UserResponse> result = authService.listUsers(request);
 
         assertThat(result).isNotNull();
         assertThat(result).isEmpty();
 
-        verify(userMapper).listUsers(10, 10);
+        verify(userMapper).selectList(any(QueryWrapper.class));
     }
 
     @Test
@@ -162,42 +151,48 @@ public class AuthServiceTest {
         request.setPage(0);
         request.setSize(2);
 
-        User user1 = createUser("user1", "password1");
+        User user1 = createUserEntity("user1", "password1");
         user1.setId(1);
-        user1.setEmail("user1@example.com");
+        user1.setRegisterIp("127.0.0.1");
+        user1.setRegisterUrl("/signup");
 
-        User user2 = createUser("user2", "password2");
+        User user2 = createUserEntity("user2", "password2");
         user2.setId(2);
-        user2.setEmail("user2@example.com");
+        user2.setRegisterIp("127.0.0.2");
+        user2.setRegisterUrl("/register");
 
-        List<User> userList = List.of(user1, user2);
-        when(userMapper.listUsers(0, 2)).thenReturn(userList);
+        when(userMapper.selectList(any(QueryWrapper.class))).thenReturn(List.of(user1, user2));
 
         List<UserResponse> result = authService.listUsers(request);
 
-        assertThat(result).isNotNull();
         assertThat(result).hasSize(2);
         assertThat(result.get(0).id()).isEqualTo(user1.getId());
         assertThat(result.get(0).username()).isEqualTo("user1");
         assertThat(result.get(0).siteId()).isEqualTo(user1.getSiteId());
         assertThat(result.get(0).channelId()).isEqualTo(user1.getChannelId());
+        assertThat(result.get(0).registerIp()).isEqualTo(user1.getRegisterIp());
+        assertThat(result.get(0).registerUrl()).isEqualTo(user1.getRegisterUrl());
+
         assertThat(result.get(1).id()).isEqualTo(user2.getId());
         assertThat(result.get(1).username()).isEqualTo("user2");
         assertThat(result.get(1).siteId()).isEqualTo(user2.getSiteId());
         assertThat(result.get(1).channelId()).isEqualTo(user2.getChannelId());
+        assertThat(result.get(1).registerIp()).isEqualTo(user2.getRegisterIp());
+        assertThat(result.get(1).registerUrl()).isEqualTo(user2.getRegisterUrl());
 
-        verify(userMapper).listUsers(0, 2);
+        verify(userMapper).selectList(any(QueryWrapper.class));
     }
 
     @Test
     void listUsers_shouldUseDefaultPageParameters_whenNotProvided() {
         UserListRequest request = new UserListRequest();
 
-        when(userMapper.listUsers(10, 10)).thenReturn(Collections.emptyList());
+        when(userMapper.selectList(any(QueryWrapper.class))).thenReturn(List.of());
 
-        authService.listUsers(request);
+        List<UserResponse> result = authService.listUsers(request);
 
-        verify(userMapper).listUsers(10, 10);
+        assertThat(result).isEmpty();
+        verify(userMapper).selectList(any(QueryWrapper.class));
     }
 
     @Test
@@ -206,15 +201,13 @@ public class AuthServiceTest {
         request.setUsername("test");
         request.setPassword("password");
 
-        when(userMapper.existsByUsername(request.getUsername())).thenReturn(false);
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(null);
 
         assertThatThrownBy(() -> authService.loginUser(request))
-                .isInstanceOfSatisfying(BizException.class, ex -> {
-                    assertThat(ex.getErrorCode()).isEqualTo(BizCode.USERNAME_NOT_EXIST);
-                });
+                .isInstanceOfSatisfying(BizException.class, ex ->
+                        assertThat(ex.getErrorCode()).isEqualTo(BizCode.USERNAME_NOT_EXIST));
 
-        verify(userMapper).existsByUsername(request.getUsername());
-        verifyNoMoreInteractions(userMapper);
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verifyNoInteractions(passwordEncoder, jwtUtil);
     }
 
@@ -224,23 +217,20 @@ public class AuthServiceTest {
         String rawPassword = "wrongpassword";
         String encodedPassword = "$2a$10$encodedPasswordHash";
 
-        User user = createUser(username, encodedPassword);
+        User user = createUserEntity(username, encodedPassword);
 
         LoginRequest request = new LoginRequest();
         request.setUsername(username);
         request.setPassword(rawPassword);
 
-        when(userMapper.existsByUsername(username)).thenReturn(true);
-        when(userMapper.findByUsername(username)).thenReturn(user);
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(user);
         when(passwordEncoder.matches(rawPassword, encodedPassword)).thenReturn(false);
 
         assertThatThrownBy(() -> authService.loginUser(request))
-                .isInstanceOfSatisfying(BizException.class, ex -> {
-                    assertThat(ex.getErrorCode()).isEqualTo(BizCode.AUTH_INVALID_CREDENTIALS);
-                });
+                .isInstanceOfSatisfying(BizException.class, ex ->
+                        assertThat(ex.getErrorCode()).isEqualTo(BizCode.AUTH_INVALID_CREDENTIALS));
 
-        verify(userMapper).existsByUsername(username);
-        verify(userMapper).findByUsername(username);
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verify(passwordEncoder).matches(rawPassword, encodedPassword);
         verifyNoInteractions(jwtUtil);
     }
@@ -254,16 +244,15 @@ public class AuthServiceTest {
         Integer userId = 1;
         String email = "test@example.com";
 
-        User user = createUser(username, encodedPassword);
-        user.setId(userId.intValue());
+        User user = createUserEntity(username, encodedPassword);
+        user.setId(userId);
         user.setEmail(email);
 
         LoginRequest request = new LoginRequest();
         request.setUsername(username);
         request.setPassword(rawPassword);
 
-        when(userMapper.existsByUsername(username)).thenReturn(true);
-        when(userMapper.findByUsername(username)).thenReturn(user);
+        when(userMapper.selectOne(any(QueryWrapper.class))).thenReturn(user);
         when(passwordEncoder.matches(rawPassword, encodedPassword)).thenReturn(true);
         when(jwtUtil.generateToken(user, "app")).thenReturn(generatedToken);
 
@@ -277,13 +266,20 @@ public class AuthServiceTest {
         assertThat(response.getUserInfo().getUsername()).isEqualTo(username);
         assertThat(response.getUserInfo().getEmail()).isEqualTo(email);
 
-        verify(userMapper).existsByUsername(username);
-        verify(userMapper).findByUsername(username);
+        verify(userMapper).selectOne(any(QueryWrapper.class));
         verify(passwordEncoder).matches(rawPassword, encodedPassword);
         verify(jwtUtil).generateToken(user, "app");
     }
 
-    private User createUser(String username, String password) {
+    private RegisterRequest mockRegisterRequest(String username, String password, String mobile) {
+        RegisterRequest request = org.mockito.Mockito.mock(RegisterRequest.class);
+        when(request.getUsername()).thenReturn(username);
+        when(request.getPassword()).thenReturn(password);
+        when(request.getMobile()).thenReturn(mobile);
+        return request;
+    }
+
+    private User createUserEntity(String username, String password) {
         User user = new User();
         user.setId(1);
         user.setUsername(username);
